switch Path.of to Paths.get
Signed-off-by: Steven Bayer <smbayer@amazon.com>